# flaase-cli-rust

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml  stale.yml  welcome.yml
src/: lib.rs  main.rs
src/cli/: app.rs  auth.rs  autodeploy.rs  deploy.rs  domain.rs  env.rs  logs.rs  mod.rs  server.rs  server_status.rs  status.rs  webhook.rs
src/core/: app_config.rs  config.rs  context.rs  deploy.rs  deployments.rs  env.rs  error.rs  mod.rs  notifications.rs  registry.rs  secrets.rs  stack_detection.rs
src/providers/: container.rs  firewall.rs  git.rs  mod.rs  package_manager.rs  reverse_proxy.rs  ssh.rs  system.rs  webhook.rs
src/templates/: dockerfile.rs  mod.rs  traefik.rs
src/transport/: mod.rs
src/ui/: mod.rs  output.rs  progress.rs
src/ui/components/: confirm.rs  mod.rs  select.rs  text_input.rs
src/utils/: mod.rs  validation.rs
