[package]
name = "flaase"
version = "0.5.0"
edition = "2021"
authors = ["Maxence Mahieux"]
description = "A CLI tool for simplified VPS deployment"
repository = "https://github.com/MaxenceMahieux/flaase-cli-rust"
license = "MIT"
readme = "README.md"
keywords = ["cli", "deployment", "vps", "docker", "traefik"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "flaase"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Templates
tera = "1.20"

# SSH
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# Terminal UI
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
strip = true
codegen-units = 1
