[package]
name = "flaase"
version = "0.15.1"
edition = "2021"
authors = ["Maxence Mahieux"]
description = "A CLI tool for simplified VPS deployment"
repository = "https://github.com/MaxenceMahieux/flaase-cli-rust"
license = "MIT"
readme = "README.md"
keywords = ["cli", "deployment", "vps", "docker", "traefik"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "flaase"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Encoding
base64 = "0.22"

# Templates
tera = "1.20"

# SSH
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# Terminal UI
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing (for HTTP Basic Auth)
bcrypt = "0.16"

# Cryptography (for webhook signature verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP server (for webhook endpoint)
tiny_http = "0.12"

# Signal handling
ctrlc = "3.4"

# System
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
